<resources>
    <string name="app_name">Skill Squared2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Jawad Ali</string>
    <string name="nav_header_subtitle">Jawadmughal490@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_inbox">Inbox</string>
    <string name="menu_saved">Saved</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_send">Send</string>

    <string name="content_description">Content Description</string>
    <string name="price">Price</string>
    <string name="service_title">Title</string>
    <string name="categories">Categories</string>
    <string name="subcategory">Sub Category</string>
    <string name="subcategory_child">Subcategory Child</string>
    <string name="manageService">Manage Services</string>
    <string name="enter_only_number">Enter Numbers Only</string>
    <string name="delivery">Delivery</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="service_banner">Service Banner</string>
    <string name="choose_file">Choose File</string>
    <string name="add_additional_info">Requirements</string>
    <string name="add_additional_information">Tell the buyer what you need to start working</string>
    <string name="publish">Publish</string>
    <string name="manageServiceTitle">Title</string>
    <string name="click">Clicks</string>
    <string name="numberOfClicks">0</string>
    <string name="ordersManageService">Orders</string>
    <string name="custom_order">Custom Orders</string>
    <string name="reviews">Reviews</string>
    <string name="service_as_described">Service As Described</string>
    <string name="guest">Guest</string>
    <string name="rating">Rating</string>
    <string name="get_started">Get Started</string>
    <string name="post_a_job">Post A Job</string>
    <string name="view_posted_jobs">View Posted Jobs</string>
    <string name="manage_orders">Manage Orders</string>
    <string name="add_description">Add Description</string>
    <string name="max_3000_characters">max 3000 Characters</string>
    <string name="_0_3000">0/3000</string>
    <string name="choose_a_categor">Choose a Category</string>
    <string name="choose_would_you_like_your_service_delivered">When would you like your service delivered?</string>
    <string name="in_days">in days</string>
    <string name="whats_your_budget">What is your Budget?</string>
    <string name="budget">budget</string>
    <string name="min_5">min $5</string>
    <string name="enter_your_budget">Enter your budget</string>
    <string name="submit_your_request">Submit Your Request</string>
    <string name="save">Save</string>

</resources>
