<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fitsSystemWindows="true"
    tools:context=".Seller.CreateServicesPricing">

    <!--Display back button in toolbar-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarNav"
        android:layout_width="fill_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:contentInsetStart="0dp"
        android:contentInsetLeft="0dp"
        android:contentInsetEnd="0dp"
        android:contentInsetRight="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivBackCreateService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:contentDescription="@string/content_description"
                android:padding="10dp"
                android:src="@drawable/ic_arrow_back_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/ivBackCreateService"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:text="Pricing"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/black" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/rlBottomButton"
        android:layout_below="@id/toolbarNav"
        android:layout_marginBottom="20dp"
        android:fillViewport="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvPriceCreateService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/toolbarNav"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/etPriceCardView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/tvPriceCreateService"
                app:strokeColor="@color/darkGray"
                app:strokeWidth="1dp">

                <EditText
                    android:id="@+id/etPriceCreateService"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:digits="0123456789"
                    android:hint="@string/enter_only_number"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="7"
                    android:maxLines="1"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tvDeliveryCreateService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/etPriceCardView"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/delivery"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/etDeliveryCardView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/tvDeliveryCreateService"
                app:strokeColor="@color/darkGray"
                app:strokeWidth="1dp">

                <EditText
                    android:id="@+id/etDeliveryTimeCreateService"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:digits="0123456789"
                    android:hint="@string/delivery_time"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="3"
                    android:maxLines="1"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tvServiceBanner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/etDeliveryCardView"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/service_banner"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/serviceBannerCardView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/tvServiceBanner"
                app:strokeColor="@color/darkGray"
                app:strokeWidth="1dp">

                <EditText
                    android:id="@+id/etServiceBannerCreateService"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:cursorVisible="false"
                    android:drawableStart="@drawable/ic_attachment"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/black"
                    android:editable="false"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:hint="@string/choose_file"
                    android:importantForAutofill="no"
                    android:inputType="textUri"
                    android:maxLines="1"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="18sp"
                    tools:targetApi="m" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tvAdditionalInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/serviceBannerCardView"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/add_additional_info"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/additionalInfoCardView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@id/tvAdditionalInfo"
                app:strokeColor="@color/darkGray"
                app:strokeWidth="1dp">

                <EditText
                    android:id="@+id/etRequirementsCreateService"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/add_additional_information"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:padding="10dp"
                    android:textSize="16sp" />

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:id="@+id/rlBottomButton"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:background="@color/lightGray">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/publishCreateService"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/publish"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>

</RelativeLayout>