<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fillViewport="true"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.GigsDetailActivity">

        <!--Display back button in toolbar-->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarNav"
            android:layout_width="fill_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/lightGray"
            android:contentInsetStart="0dp"
            android:contentInsetLeft="0dp"
            android:contentInsetEnd="0dp"
            android:contentInsetRight="0dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusedByDefault="true"
                tools:targetApi="o">

                <ImageView
                    android:id="@+id/ivBackGigsDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/content_description"
                    android:focusableInTouchMode="true"
                    android:padding="10dp"
                    android:src="@drawable/ic_arrow_back_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/ivBackGigsDetail"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/black" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/ivGigsDetails"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/content_description"
            android:scaleType="fitXY"
            android:src="@drawable/noimg" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                tools:ignore="UseCompoundDrawables">

                <!--<com.skillsquared2.app.cometChat.CustomView.CircleImageView
                    android:id="@+id/ivUserProfile"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/content_description"
                    android:src="@drawable/user_profile"
                    app:civ_border_color="@color/colorPrimaryDark"
                    app:civ_border_width="1dp"
                    /> -->

                <TextView
                    android:id="@+id/tvPriceGigsDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:padding="10dp"
                    android:text="@string/price"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvUserNameGigsDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:layout_toStartOf="@+id/tvPriceGigsDetail"

                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/guest"
                    android:textSize="20sp" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/darkGray" />

            <Button
                android:id="@+id/btnCustomOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/custom_order"
                android:textColor="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/darkGray" />

            <TextView
                android:id="@+id/tvGigsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/service_as_described"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <!--<com.skillsquared.app.utils.ExpandableTextView
                    android:id="@+id/tvGigsDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textColor="@color/colorBlack" />-->

            </androidx.core.widget.NestedScrollView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/darkGray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvReviewNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/reviews"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RatingBar
                    android:id="@+id/tvRatingGigsDetail"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:stepSize="0.1" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycleReviews"
                android:layout_width="match_parent"
                android:layout_height="300dp" />

        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>